# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-1f89c728d5844876c4821991d4d46c5c71b745110b113a86e440578e76bfc2ca.json  query-3391e433f97ea190d5b67178075e6f9f198f93e9b617b1074f206f139b793278.json  query-39f0461a6826ed3ea0f6ea6365b49b19845b9ba665f2fcdd8304bfa21ef1b691.json  query-464ee3b59fd70491697fb8f9c324ce6a6cd3d9f73afc97479207fcba37d0a551.json  query-68d9262c70393ce893643c23c6a7c1c5713fbc15b2844b2d3178a82d5120f0d2.json  query-94f5ce4d24c5d2d1a34b0531ac1dff89c7105106cce2c903279ac72afcdafaae.json  query-a488a601a80868d9ad19f48085e8e770886da1f176d5fbeb6ede666b82445e86.json  query-bd9c654d588dce4d49a1def3f0b1850b90f4429d71322b74b0b9942450590349.json
configuration/: base.yaml
migrations/: 20250719075249_create_subsciptions_table.sql  20250803021504_create_subsciption_tokens_table.sql  20250812081106_add_salt_to_users.sql  20250822010113_create_newsletter_issues_table.sql  20250822010759_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
