[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Kittichan Ruadrewworakit"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.41", default-features = false ,features = ["clock"] }
claims = "0.8.0"
config = "0.15.13"
log = "0.4.27"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4"] }
validator = "0.20.0"
rand = { version = "0.9.2", features = ["std_rng"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
base64 = "0.22.1"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }


[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["json", "rustls-tls", "cookies"]


[dev-dependencies]
fake = "4.3.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.142"
wiremock = "0.6.4"
